moved index.html out of src

--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Mark Teoh</title>
-    <link rel="stylesheet" href="styles.css">
+    <link rel="stylesheet" href="src/styles.css">
 </head>
 <body>
     <header>
@@ -20,7 +20,7 @@
     </header>
     <section id="about" class="text-center p-6 bg-sky-50">
         <h2 class="text-2xl font-bold mb-4 text-left">About Me</h2>
-        <img src="../img/professionalshot.jpg" alt="About Me Image" class="w-48 h-48 object-cover object-top rounded-full mx-auto mb-4"> Hi, I am Mark, a software engineer and UQ graduate with experience as an Automation Test Engineer. Passionate about problem-solving and software development. Outside of tech, I am also a dedicated diving coach, helping athletes refine their skills and reach new heights.</p>
+        <img src="/img/professionalshot.jpg" alt="About Me Image" class="w-48 h-48 object-cover object-top rounded-full mx-auto mb-4"> Hi, I am Mark, a software engineer and UQ graduate with experience as an Automation Test Engineer. Passionate about problem-solving and software development. Outside of tech, I am also a dedicated diving coach, helping athletes refine their skills and reach new heights.</p>
     </section>
 </body>
 </html>
